Fix button alignment in work history section.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -234,6 +234,7 @@ i {
 .timeline .cta-btn.dark-btn {
   height: 35px;
   font-size: 0.8rem;
+  margin: 0;
 }
 
 .container,
@@ -509,6 +510,13 @@ html {
   }
   .project-box p {
     padding-top: 3.5rem;
+  }
+  .event p,
+  .event button {
+    display: inline-block;
+  }
+  .timeline .cta-btn.dark-btn {
+    float: right;
   }
 }
 /*# sourceMappingURL=main.css.map */
