--- a/static/scss/helpers/_icons_buttons.scss
+++ b/static/scss/helpers/_icons_buttons.scss
@@ -174,4 +174,5 @@ i {
 .timeline .cta-btn.dark-btn {
     height: 35px;
     font-size: 0.8rem;
+    margin: 0;
 }
